feat: navigation-compose gradle추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ truth = "1.4.4"
 mockitoVersion = "5.14.2"
 mockitoKotlinVersion = "5.4.0"
 mockkVersion = "1.13.13"
+nav_Version = "2.8.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -63,6 +64,9 @@ okHttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHtt
 # Hilt
 hilt-android = { group="com.google.dagger", name="hilt-android", version.ref="hilt"}
 hilt-android-compiler = { group="com.google.dagger", name="hilt-android-compiler", version.ref="hilt" }
+
+# Navigation-Compose
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref="nav_Version" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
