--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ mockitoVersion = "5.14.2"
 mockitoKotlinVersion = "5.4.0"
 mockkVersion = "1.13.13"
 nav_Version = "2.8.5"
+room_version = "2.6.1"
+ksp_version = "1.9.0-1.0.13"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,11 +70,19 @@ hilt-android-compiler = { group="com.google.dagger", name="hilt-android-compiler
 # Navigation-Compose
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref="nav_Version" }
 
+# Room
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room_version" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room_version" }
+room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room_version" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
-jetbrainsKotlinKapt = { id="org.jetbrains.kotlin.kapt", version.ref="kotlin" }
+jetbrainsKotlinKapt = { id="org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 googleDaggerHiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "junit5Plugin" }
+# ksp
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp_version" }
