feat: Gson Gradle 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ mockkVersion = "1.13.13"
 nav_Version = "2.8.5"
 room_version = "2.6.1"
 ksp_version = "1.9.0-1.0.13"
+gson_version = "2.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -75,6 +76,9 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room_version" }
 room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room_version" }
+
+# Gson
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson_version" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
