--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -75,6 +75,7 @@ okHttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHtt
 # Hilt
 hilt-android = { group="com.google.dagger", name="hilt-android", version.ref="hilt"}
 hilt-android-compiler = { group="com.google.dagger", name="hilt-android-compiler", version.ref="hilt" }
+hilt-android-test = { group="com.google.dagger", name="hilt-android-testing", version.ref="hilt" }
 
 # Navigation-Compose
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref="nav_Version" }
