feat: BudgetRepositoryImpl 테스트 코드 작성

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ junit5Plugin = "1.9.3.0"
 truth = "1.4.4"
 mockitoVersion = "5.14.2"
 mockitoKotlinVersion = "5.4.0"
+mockitoInline_version = "2.8.47"
 mockkVersion = "1.13.13"
 nav_Version = "2.8.5"
 room_version = "2.6.1"
@@ -45,6 +46,8 @@ truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockitoVersion" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlinVersion" }
+mockito-android = { group = "org.mockito", name = "mockito-android", version.ref = "mockitoVersion" }
+mockito-inline = { group = "org.mockito", name = "mockito-inline", version.ref = "mockitoInline_version" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockkVersion" }
 
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
